--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.android.gles3jni">
   <uses-feature android:glEsVersion="0x00030000"/>
+
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+  <!-- A camera with RAW capability is required to use this application -->
+  <uses-feature android:name="android.hardware.camera" />
+  <uses-feature android:name="android.hardware.camera.raw" />
+
+
   <application
       android:allowBackup="false"
       android:fullBackupContent="false"
